[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/interface/shop/ItemFrame.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interface/shop/Shop.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.717647, 0.290196, 0.290196, 1 )

[node name="Shop" type="Panel"]
anchor_bottom = 1.0
margin_right = 304.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 3 )

[node name="Money" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -76.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Mp" type="Label" parent="Money"]
margin_right = 24.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "MP:"

[node name="Number" type="Label" parent="Money"]
margin_left = 28.0
margin_right = 76.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ShopHB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ShopHB"]
margin_right = 304.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "shop"
align = 1

[node name="Container" type="TabContainer" parent="ShopHB"]
margin_top = 18.0
margin_right = 304.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
tab_align = 0

[node name="Struct" type="Control" parent="ShopHB/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="ScrollContainer" parent="ShopHB/Container/Struct"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="StructGrid" type="GridContainer" parent="ShopHB/Container/Struct/GridContainer"]
margin_right = 276.0
margin_bottom = 788.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Control" parent="ShopHB/Container/Struct/GridContainer/StructGrid" instance=ExtResource( 2 )]
margin_right = 136.0

[node name="Control2" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control3" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_top = 132.0
margin_right = 136.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control4" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_left = 140.0
margin_top = 132.0
margin_right = 276.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control5" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_top = 264.0
margin_right = 136.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control6" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_left = 140.0
margin_top = 264.0
margin_right = 276.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control7" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_top = 396.0
margin_right = 136.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control8" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_left = 140.0
margin_top = 396.0
margin_right = 276.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control9" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_top = 528.0
margin_right = 136.0
margin_bottom = 656.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control10" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_left = 140.0
margin_top = 528.0
margin_right = 276.0
margin_bottom = 656.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control11" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_top = 660.0
margin_right = 136.0
margin_bottom = 788.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control12" type="Panel" parent="ShopHB/Container/Struct/GridContainer/StructGrid"]
margin_left = 140.0
margin_top = 660.0
margin_right = 276.0
margin_bottom = 788.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Thrust" type="Control" parent="ShopHB/Container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="ScrollContainer" parent="ShopHB/Container/Thrust"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="TrustGrid" type="GridContainer" parent="ShopHB/Container/Thrust/GridContainer"]
margin_right = 288.0
margin_bottom = 788.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Control" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_right = 136.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control2" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control3" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_top = 132.0
margin_right = 136.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control4" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_left = 140.0
margin_top = 132.0
margin_right = 276.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control5" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_top = 264.0
margin_right = 136.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control6" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_left = 140.0
margin_top = 264.0
margin_right = 276.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control7" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_top = 396.0
margin_right = 136.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control8" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_left = 140.0
margin_top = 396.0
margin_right = 276.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control9" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_top = 528.0
margin_right = 136.0
margin_bottom = 656.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control10" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_left = 140.0
margin_top = 528.0
margin_right = 276.0
margin_bottom = 656.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control11" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_top = 660.0
margin_right = 136.0
margin_bottom = 788.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control12" type="Panel" parent="ShopHB/Container/Thrust/GridContainer/TrustGrid"]
margin_left = 140.0
margin_top = 660.0
margin_right = 276.0
margin_bottom = 788.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Collect" type="Control" parent="ShopHB/Container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="ScrollContainer" parent="ShopHB/Container/Collect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="CollectGrid" type="GridContainer" parent="ShopHB/Container/Collect/GridContainer"]
margin_right = 288.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Control" type="Panel" parent="ShopHB/Container/Collect/GridContainer/CollectGrid"]
margin_right = 159.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control2" type="Panel" parent="ShopHB/Container/Collect/GridContainer/CollectGrid"]
margin_left = 163.0
margin_right = 322.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control3" type="Panel" parent="ShopHB/Container/Collect/GridContainer/CollectGrid"]
margin_top = 132.0
margin_right = 159.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control4" type="Panel" parent="ShopHB/Container/Collect/GridContainer/CollectGrid"]
margin_left = 163.0
margin_top = 132.0
margin_right = 322.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control5" type="Panel" parent="ShopHB/Container/Collect/GridContainer/CollectGrid"]
margin_top = 264.0
margin_right = 159.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Util" type="Control" parent="ShopHB/Container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="ScrollContainer" parent="ShopHB/Container/Util"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="UtilGrid" type="GridContainer" parent="ShopHB/Container/Util/GridContainer"]
margin_right = 288.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Control" type="Panel" parent="ShopHB/Container/Util/GridContainer/UtilGrid"]
margin_right = 159.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control2" type="Panel" parent="ShopHB/Container/Util/GridContainer/UtilGrid"]
margin_left = 163.0
margin_right = 322.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Control3" type="Panel" parent="ShopHB/Container/Util/GridContainer/UtilGrid"]
margin_top = 132.0
margin_right = 159.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Button" type="Button" parent="ShopHB"]
visible = false
margin_top = 548.0
margin_right = 304.0
margin_bottom = 600.835
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
